#3 Bug on iPhone 5(S) with background

--- a/style/main.css
+++ b/style/main.css
@@ -16,10 +16,12 @@ a:not([name]) {
 	text-decoration: none;
 }
 #video-wrapper {
-	height: 100vh;
+	height: 100vh !important;
+	height: 800px;
 	overflow: hidden;
 	position: relative;
 }
+/*
 #video-wrapper h1 {
 	position: absolute;
 	width: 400px;
@@ -32,6 +34,7 @@ a:not([name]) {
 	font-size: 2.750em;
 	z-index: 1000;
 }
+*/
 #video-wrapper .background {
 	position: absolute;
 	z-index: -101;
